package strategy.fly;

/**
 * @author BianWenKai
 * @Data 2021/6/2 - 19:39
 **/
public interface FlyBehavior {
    void fly();
}
