package strategy.quack;

/**
 * @author BianWenKai
 * @Data 2021/6/2 - 20:16
 **/
public interface QuackBehavior {
    void quack();
}
